# ScrumPoker

./: README.md  ScrumPoker.doap  me.dcordero.scrumpoker.json  meson.build
src/: Main.vala  ScrumPoker.vala  Templates.vala  Window.vala  meson.build
